T-DOP-603-STG_1/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-poll
  namespace: default
  labels:
    app: poll
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: poll
