T-DOP-603-STG_1/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-redis
  namespace: default
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
