T-DOP-603-STG_1/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-result
  namespace: default
  labels:
    app: result
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: result
