T-DOP-603-STG_1/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30021
      protocol: TCP
      name: http
    - port: 8080
      targetPort: 8080
      nodePort: 30042
      protocol: TCP
      name: admin
  selector:
    app: traefik
